Table users {
  id uuid [pk]
  email varchar [unique, not null]
  name varchar [not null]
  password_hash varchar [not null]
  role varchar
  status varchar
  partner_id uuid
  avatar_url varchar
  profile_photo jsonb
  bio text
  phone varchar
  address text
  terms_accepted_at timestamp
  last_login_at timestamp
  created_at timestamp
  updated_at timestamp
}

Table partners {
  id uuid [pk]
  name varchar [not null]
  description text
  logo_url varchar
  email varchar [unique, not null]
  phone varchar
  address text
  website varchar
  service_types text
  contact_person varchar
  status varchar
  verified boolean
  rating decimal
  latitude decimal
  longitude decimal
  created_at timestamp
  updated_at timestamp
}

Table user_preferences {
  id uuid [pk]
  user_id uuid [unique, not null]
  email_notifications boolean
  push_notifications boolean
  sms_notifications boolean
  newsletter boolean
  updated_at timestamp
}

Table submissions {
  id uuid [pk]
  user_id uuid [not null]
  item_type varchar [not null]
  condition varchar [not null]
  fabric varchar
  cleanliness varchar
  description text
  photos json[]
  status varchar
  assigned_partner_id uuid
  submission_code varchar [unique]
  service_type varchar
  quantity int
  buyback_interest boolean
  action varchar
  scheduled_at timestamp
  created_at timestamp
  updated_at timestamp
}

Table submission_details {
  id uuid [pk]
  submission_id uuid [unique, not null]
  item_types text
  other_item_type text
  condition text
  cleanliness text
  knows_fabric_type boolean
  fabric_types text
  fabric_identification text
  brand text
  no_brand_visible boolean
  fabric_description text
  weight_value decimal
  weight_unit varchar
  created_at timestamp
  updated_at timestamp
}

Table burn_tests {
  id uuid [pk]
  submission_id uuid [not null]
  performed boolean
  page int
  moment text
  flames text
  no_flame text
  smell text
  ashes text
  created_at timestamp
  updated_at timestamp
}

Table submission_images {
  id uuid [pk]
  submission_id uuid [not null]
  url text [not null]
  storage_key text
  metadata jsonb
  uploaded_at timestamp
}

Table transactions {
  id uuid [pk]
  submission_id uuid [not null]
  from_user_id uuid [not null]
  to_partner_id uuid
  type varchar [not null]
  notes text
  bag_color varchar
  estimated_distance_km decimal
  estimated_carbon_kg decimal
  outcome_title text
  outcome_description text
  outcome_photos jsonb
  outcome_reported_at timestamp
  created_at timestamp
  updated_at timestamp
}

Table deleted_records {
  id uuid [pk]
  entity_type varchar [not null]
  entity_id uuid [not null]
  snapshot jsonb
  deleted_by_user_id uuid
  deleted_at timestamp
}

Table request_tracking_updates {
  id uuid [pk]
  submission_id uuid [not null]
  request_id uuid
  user_id uuid [not null]
  partner_id uuid
  progress_status varchar [not null]
  fulfillment_method varchar
  contact_name varchar
  logistics_company varchar
  tracking_number varchar
  dropoff_scheduled_at timestamp
  dropoff_location text
  notes text
  created_at timestamp
  updated_at timestamp
}

Table recommendation_runs {
  id uuid [pk]
  submission_id uuid
  requested_by_user_id uuid
  engine_name varchar
  engine_version varchar
  status varchar
  criteria jsonb
  input_snapshot jsonb
  started_at timestamp
  completed_at timestamp
  error_message text
  created_at timestamp
}

Table recommendation_results {
  id uuid [pk]
  run_id uuid [not null]
  submission_id uuid
  partner_id uuid
  recommended_pathway varchar [not null]
  rank int
  score decimal
  confidence decimal
  explanation text
  details text
  output_payload jsonb
  selected boolean
  generated_at timestamp
}

Table recommendation_feedback {
  id uuid [pk]
  recommendation_result_id uuid [not null]
  user_id uuid
  rating int
  accepted boolean
  feedback text
  created_at timestamp
}

Table notifications {
  id uuid [pk]
  user_id uuid [not null]
  type varchar [not null]
  title varchar
  message text
  related_id uuid
  read boolean
  created_at timestamp
}

Table activity_logs {
  id uuid [pk]
  user_id uuid
  action varchar [not null]
  entity_type varchar
  entity_id uuid
  details jsonb
  created_at timestamp
}

Table conversations {
  id uuid [pk]
  user_id uuid [not null]
  partner_id uuid
  conversation_type varchar
  subject text
  status varchar
  related_submission_id uuid
  created_at timestamp
  updated_at timestamp
}

Table messages {
  id uuid [pk]
  from_user_id uuid [not null]
  to_user_id uuid [not null]
  conversation_id uuid
  sender_type varchar
  content text [not null]
  read boolean
  created_at timestamp
}

Table message_attachments {
  id uuid [pk]
  message_id uuid [not null]
  filename text
  url text [not null]
  metadata jsonb
  uploaded_at timestamp
}

Table uploaded_files {
  id uuid [pk]
  user_id uuid
  storage_key text [not null]
  url text [not null]
  original_name text
  content_type text
  size_bytes int
  purpose varchar
  related_entity_type varchar
  related_entity_id uuid
  metadata jsonb
  created_at timestamp
  updated_at timestamp
}

Ref: users.partner_id > partners.id
Ref: user_preferences.user_id > users.id
Ref: submissions.user_id > users.id
Ref: submissions.assigned_partner_id > partners.id
Ref: submission_details.submission_id > submissions.id
Ref: burn_tests.submission_id > submissions.id
Ref: submission_images.submission_id > submissions.id
Ref: transactions.submission_id > submissions.id
Ref: transactions.from_user_id > users.id
Ref: transactions.to_partner_id > partners.id
Ref: request_tracking_updates.submission_id > submissions.id
Ref: request_tracking_updates.request_id > transactions.id
Ref: request_tracking_updates.user_id > users.id
Ref: request_tracking_updates.partner_id > partners.id
Ref: recommendation_runs.submission_id > submissions.id
Ref: recommendation_runs.requested_by_user_id > users.id
Ref: recommendation_results.run_id > recommendation_runs.id
Ref: recommendation_results.submission_id > submissions.id
Ref: recommendation_results.partner_id > partners.id
Ref: recommendation_feedback.recommendation_result_id > recommendation_results.id
Ref: recommendation_feedback.user_id > users.id
Ref: notifications.user_id > users.id
Ref: activity_logs.user_id > users.id
Ref: conversations.user_id > users.id
Ref: conversations.partner_id > partners.id
Ref: conversations.related_submission_id > submissions.id
Ref: messages.from_user_id > users.id
Ref: messages.to_user_id > users.id
Ref: messages.conversation_id > conversations.id
Ref: message_attachments.message_id > messages.id
Ref: uploaded_files.user_id > users.id
Ref: deleted_records.deleted_by_user_id > users.id
